# MFO-Algorithm

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  run.py
MFO-Algorithm/: pyproject.toml
Models/: fitnessfunctions.py  mfo.py  test.py
Report Files's Outputs/7/: 7.txt
Report Files's Outputs/8/: 8.txt
Report Files's Outputs/9/: 9.txt
docs/: README_2020.md
examples/: cli.py  run.py  run_all.py
reports/: sphere_report.txt
src/mfo_algorithm/: __init__.py  cli.py  mfo.py
src/mfo_algorithm/fitnessfunctions/: __init__.py  functions_2d.py  functions_nd.py
tests/: test_fitnessfunctions.py  test_mfo.py
