[project]
name = "mfo-algorithm"
version = "0.1.0"
description = "Moth-Flame Optimization Algorithm in Python"
authors = [
    {name = "HmdBbgh", email = "hbabagheybi@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "mfo_algorithm", from = "src" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "typer (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mfo = "mfo_algorithm.cli:app"