[tool.poetry]
name = "mfo-algorithm"
version = "0.1.0"
description = "Moth-Flame Optimization (MFO) algorithm implemented as a Python package"
authors = ["HmdBbgh <hbabagheybi@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/hmdbbgh/MFO-Algorithm"
repository = "https://github.com/hmdbbgh/MFO-Algorithm"
keywords = ["optimization", "metaheuristic", "MFO", "moth-flame", "python"]
packages = [
    { include = "mfo_algorithm", from = "src" }
]
python = ">=3.8"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.26"
matplotlib = "^3.8"

[tool.poetry.dev-dependencies]
black = "^24.3"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
